--- a/css/header_footer.css
+++ b/css/header_footer.css
@@ -89,12 +89,15 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 3px;
 }
 .gnbBtn span {
     width: 100%;
     height: 5px;
     background: var(--main-navy-color);
+    margin-bottom: 3px;
+}
+.gnbBtn span:last-of-type {
+    margin-bottom: 0;
 }
 /*footer*/
 footer {
@@ -111,7 +114,6 @@ footer {
 footer .blogLink {
     display: flex;
     justify-content: space-around;
-    gap: 20px;
     width: 100px;
     margin-top: 24px;
     width: 30px;
@@ -120,6 +122,10 @@ footer .blogLink {
 footer .blogLink img{
     width: 30px;
 }
+footer .blogLink img:first-of-type {
+    margin-right: 20px;
+}
+
 
 @media all and (min-width:640px) {
     .gnbBtn {
@@ -164,7 +170,4 @@ footer .blogLink img{
     }
 }
 @media all and (min-width: 1280px) {
-    #gnb li.hide {
-        display: none;
-    }
 }
